tests/NormalTests/paczka1/fuzzy1/85025788.err
Error in line 1: zRU19mH8PX A124 24,4
Error in line 8: 3af26Yad S356 57,6
Error in line 6: A124 A252 48,0
Error in line 15: ITCKGqHTpk S356 16,6
Error in line 29: A124 A851 17,2
